--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -286,12 +286,12 @@ label {
 	position: relative;
     z-index: 999;
     text-transform: uppercase;
-    background: #884cd2;
+    background: #CAB171;
     border: none;
 }
 
 .btn:hover{
-    background: #ff4f9d;
+    background: white;
     color: #fff;
 }
 .btn:hover::before{opacity: 0;}
@@ -505,7 +505,7 @@ top: -3px;
     font-family: 'PT Serif', serif;
 }
 .main-menu ul li a::after {
-  content: "+";
+  content: "";
   margin-left: 10px;
   color: #cab171;
 }
@@ -5840,7 +5840,7 @@ min-width: 250px;
 z-index: 1;
 transition: all 0.3s ease-in-out;
 margin-top: 15px;
-border-top: 4px solid #ff4f9d;
+border-top: 4px solid black;
 box-shadow: 0 10px 15px rgba(25, 25, 25, 0.1);
 -webkit-box-shadow: 0 10px 15px rgba(25, 25, 25, 0.1);
 opacity: 0;
