adjust home page

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -10690,7 +10690,7 @@ left: 0;
 bottom: 0;
 width: 35%;
 height: 1px;
-background: #ff4f9d;
+background: black;
 content: "";
 }
 .opening-time .open-img{
