--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -3390,7 +3390,7 @@ margin-right: 15px;
   border-style: solid;
 padding: 0 0 30px 0;
     border-radius: 4px;
-    background-color: #58846D;
+    background-color: #58846d00;
 }
 .team-area .container{
     z-index: 1;
@@ -3509,7 +3509,7 @@ padding: 5px 0px 0;
 transition: .3s;
 position: relative;
     text-align: center;
-    background-color: #58846D;
+    background-color: #58846d8e;
 }
 
 .team-info .text {
