--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1757,10 +1757,10 @@ margin-bottom: 15px;
     gap: 15px;
 }
 .sr-tw-ul li:nth-child(2) {
-  margin-left: -30px;
+  margin-left: -5px;
 }
 .sr-thr-ul li:nth-child(2) {
-  margin-left: 30px;
+  margin-left: 5px;
 }
 .sr-tw-ul li:hover{
   box-shadow: 0px 30px 60px 0px rgba(0, 0, 0, 0.1);
@@ -3386,7 +3386,7 @@ margin-bottom: 20px;
 margin-left: 15px;
 margin-right: 15px;
  border-width: 1px;
-  border-color: rgb(215, 215, 215);
+  border-color: rgba(215, 215, 215, 0);
   border-style: solid;
 padding: 0 0 30px 0;
     border-radius: 4px;
