--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,17 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "LibreBaskerville";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: "LibreBaskerville"
+}
+
+@font-face {
+  font-family: "LibreBaskerville";
+  src: local("LibreBaskerville");
+  src: url("./assets/fonts/LibreBaskerville-Regular.ttf") format("truetype");
+  font-weight: normal;
 }
